assets/scss/projects.scss
//////////////
// Projects //
//////////////

.project {

	// Project > Collection
	&s {
		padding-top: 2rem;
		padding-bottom: 2rem;
	}

	// Project > Link
	&__link {
		position: relative;
		display: block;

		&:hover,
		&:focus {
			.project__view {
				opacity: 1;
			}
		}
	}

	// Project > View
	&__view {
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
		display: block;
		background-color: darken( #e63b3b, 10% );
		background-color: darken( rgba( 230, 59, 59, .85 ), 10% );
		opacity: 0;
		transition: all ease .12s;
	
		span {
			display: flex;
			justify-content: center;
			align-items: center;
			padding-left: 2rem;
			padding-right: 2rem;
			height: 100%;
			line-height: 115%;
			font-family: $font_oswald;
			font-size: 2.4rem;
			font-weight: 300;
			letter-spacing: -.01rem;
			text-align: center;
			text-transform: uppercase;
			color: #fff;
		}
	}

	// Project > Image
	&__image {
		display: block;
		width: 100%;
	}
}

// Project > Attribution
.attribution {
	margin-top: 2rem;
	padding: 1rem;
	background-color: #fcfcfc;
	font-size: 1.3rem;
	font-style: italic;
	color: #bbb;
	border-radius: .4rem;

	&:before {
		content: '\00a9';
		display: block;
		float: left;
		margin-right: .4rem;
		font-family: 'Arial', sans-serif;
		font-weight: bold;
		font-size: 1.7rem;
	}

	& > p {
		font-size: inherit;
		color: inherit;
	}
}

